Fix: prevent percentage bar to overflow on new line

--- a/client/src/components/data display/PercentageBar.scss
+++ b/client/src/components/data display/PercentageBar.scss
@@ -28,6 +28,7 @@
   }
 
   &__bars {
+    display: flex;
     width: 100%;
     height: 10px;
     border-radius: $card-border-radius;
